[PBNTR-470] Fixing Phone Number Input kit flag misalignment (#3626)
**What does this PR do?**
Fixing Phone Number Input kit flag misalignment

**How to test?** Steps to confirm the desired behavior:
1. Go to the Phone Number Input kit page.

#### Checklist:
- [x] **LABELS** Add a label: `enhancement`, `bug`, `improvement`, `new
kit`, `deprecated`, or `breaking`. See [Changelog &
Labels](https://github.com/powerhome/playbook/wiki/Changelog-&-Labels)
for details.
- [x] **DEPLOY** I have added the `milano` label to show I'm ready for a
review.
- [ ] **TESTS** I have added test coverage to my code.

--- a/playbook/app/pb_kits/playbook/pb_phone_number_input/_phone_number_input.scss
+++ b/playbook/app/pb_kits/playbook/pb_phone_number_input/_phone_number_input.scss
@@ -60,7 +60,6 @@ $flag-min-resolution: 192dpi;
   }
 
   .iti__flag {
-    background-image: url("https://intl-tel-input.com/intl-tel-input/img/flags.png");
     border-radius: 1px;
   }
 
@@ -195,12 +194,6 @@ $flag-min-resolution: 192dpi;
       .text_input {
         background-color: rgba($white, 0.025) !important;
       }
-    }
-  }
-
-  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: $flag-min-resolution) {
-    .iti__flag {
-      background-image: url("https://intl-tel-input.com/intl-tel-input/img/flags.png");
     }
   }
 }
